<resources>

    <string name="trtckaraoke_create_theme">%s\'s room</string>
    <string name="trtckaraoke_room_theme">Subject</string>
    <string name="trtckaraoke_room_theme_limit">Subject</string>
    <string name="trtckaraoke_tv_the_anchor_name_is_still_looking_up">Getting anchor name</string>
    <string name="trtckaraoke_warning_room_name_too_long">Room name is too long</string>
    <string name="trtckaraoke_send">Send</string>
    <string name="trtckaraoke_dialog_cancel">Cancel</string>
    <string name="trtckaraoke_btn_confirm">Confirm</string>
    <string name="trtckaraoke_warning_not_empty">The input field must not be empty!</string>
    <string name="trtckaraoke_delete">delete</string>
    <string name="trtckaraoke_tips_open_audio">Please turn on the microphone permission first</string>
    <string name="trtckaraoke_room_id">Room Id: %s</string>
    <string name="trtckaraoke_lock">Lock</string>
    <string name="trtckaraoke_unlock">UnLock</string>
    <string name="trtckaraoke_seat_already_mute">Cannot turn mic on as the seat is muted</string>
    <string name="trtckaraoke_seat_mute">Mute</string>
    <string name="trtckaraoke_seat_unmuted">Seat unmuted</string>
    <string name="trtckaraoke_tv_seat_id">Mic No.%s</string>
    <string name="trtckaraoke_tv_the_position_has_muted">Seat %d muted</string>
    <string name="trtckaraoke_tv_the_position_has_unmuted">Seat %d unmuted</string>
    <string name="trtckaraoke_tv_the_owner_ban_this_position">Seat %d locked</string>
    <string name="trtckaraoke_tv_the_owner_not_ban_this_position">Seat %d unlocked</string>
    <string name="trtckaraoke_tv_online_no_name">took seat %d</string>
    <string name="trtckaraoke_tv_offline_no_name">left seat %d</string>
    <string name="trtckaraoke_tv_enter_room">entered</string>
    <string name="trtckaraoke_tv_exit_room">left the room</string>
    <string name="trtckaraoke_anchor_leave_room">The room will close after you leave. Leave?</string>
    <string name="trtckaraoke_request_expired">The request has expired</string>
    <string name="trtckaraoke_agree">Agree</string>
    <string name="trtckaraoke_toast_owner_succeeded_in_occupying_the_seat">Seat taken successfully</string>
    <string name="trtckaraoke_toast_owner_failed_to_occupy_the_seat">Failed to take a seat [%1$d]:%2$s</string>
    <string name="trtckaraoke_apply_seat_ask">Mic on</string>
    <string name="trtckaraoke_leave_seat_ask">Are you sure you want to mic off?</string>
    <string name="trtckaraoke_toast_exit_the_room_successfully">Left room</string>
    <string name="trtckaraoke_toast_enter_the_room_successfully">Entered room</string>
    <string name="trtckaraoke_toast_enter_the_room_failure">Failed to enter room[%1$d]:%2$s</string>
    <string name="trtckaraoke_toast_list_has_not_been_initialized">The seat list has not been initialized！</string>
    <string name="trtckaraoke_online">Mic On</string>
    <string name="trtckaraoke_leave_seat">Mic Off</string>
    <string name="trtckaraoke_toast_the_room_is_not_ready">Room not ready~</string>
    <string name="trtckaraoke_toast_application_has_been_sent_please_wait_for_processing">Your request has been sent. Please wait for reply from the anchor.</string>
    <string name="trtckaraoke_toast_failed_to_send_application">Failed to send request:%s</string>
    <string name="trtckaraoke_toast_position_is_locked_cannot_enter_seat">Cannot take the seat as it is locked</string>
    <string name="trtckaraoke_toast_offline_successfully">Mic turned off</string>
    <string name="trtckaraoke_toast_offline_failure">Failed to turn mic off: %s</string>
    <string name="trtckaraoke_toast_you_are_already_an_anchor">You are an anchor now</string>
    <string name="trtckaraoke_msg_apply_for_chat">requested to take seat %d</string>
    <string name="trtckaraoke_tv_apply_for_chat">Request to Speak</string>
    <string name="trtckaraoke_seat_closed">The seat is blocked</string>
    <string name="trtckaraoke_accept_failed">Failed to accept request</string>
    <string name="trtckaraoke_msg_close_room">Room closed</string>
    <string name="trtckaraoke_toast_you_have_turned_on_the_microphone">Mic turned on</string>
    <string name="trtckaraoke_toast_you_have_turned_off_the_microphone">Mic turned off</string>
    <string name="trtckaraoke_toast_anchor_can_only_operate_it">Only an anchor can perform this operation.</string>
    <string name="trtckaraoke_toast_please_enter_content">Enter content</string>
    <string name="trtckaraoke_toast_sent_successfully">Sent</string>
    <string name="trtckaraoke_toast_sent_message_failure">Failed to send message</string>
    <string name="trtckaraoke_me">Me</string>

    <string name="trtckaraoke_create_room_limit">The cloud communication account you are currently using has not activated the KTV function, and the number of rooms created exceeds the limit, please go to the Tencent Cloud official website to open KTV，地址：https://cloud.tencent.com/document/product/269/11673</string>
    <string name="trtckaraoke_create_or_join_group_limit">The number of groups that a single user can create and join exceeds the limit, please purchase relevant packages, more details：https://cloud.tencent.com/document/product/269/11673</string>
    <string name="trtckaraoke_group_member_limit">The number of group members exceeds the limit, please refer to it, please purchase the relevant packages, more details：https://cloud.tencent.com/document/product/269/11673</string>
    <string name="trtckaraoke_welcome_visit">"Welcome to Karaoke tryout, To quickly use the feature, visit: "</string>
    <string name="trtckaraoke_welcome_visit_link">"https://cloud.tencent.com/document/product/647/59403"</string>

    <string name="trtckaraoke_start_ktv">Join</string>
    <string name="trtckaraoke_btn_choose_song">Request</string>
    <string name="trtckaraoke_btn_choosed_song">Requested</string>
    <string name="trtckaraoke_manager_ordered_song"> Manage Songs</string>
    <string name="trtckaraoke_msg_order_song_seat">Mic No.%d</string>
    <string name="trtckaraoke_msg_order_song">Request《%s》</string>
    <string name="trtckaraoke_singer">Singer: %s</string>
    <string name="trtckaraoke_tune">Tune</string>
    <string name="trtckaraoke_music_coming">Coming soon...</string>
    <string name="trtckaraoke_song_accompany">Accompany</string>
    <string name="trtckaraoke_song_original">Original</string>

    <string name="trtckaraoke_gift_title">Gift</string>
    <string name="trtckaraoke_gift_send_out">Sent</string>

    <string name="trtckaraoke_sound_effects">Sound effect settings</string>
    <string name="trtckaraoke_sound_audition">Music</string>
    <string name="trtckaraoke_put_on_your_headphones">Use earphones for better experience</string>
    <string name="trtckaraoke_sounds_adjustment">Music tone</string>
    <string name="trtckaraoke_music_volume">Music volume</string>
    <string name="trtckaraoke_mic_volume">Voice volume</string>
    <string name="trtckaraoke_changer">Voice changing</string>
    <string name="trtckaraoke_reverb">Reverb</string>
    <string name="trtckaraoke_no_effect">No effect</string>
    <string name="trtckaraoke_audio_change_type_child">Naughty boy</string>
    <string name="trtckaraoke_audio_change_type_luoli">Little girl</string>
    <string name="trtckaraoke_audio_change_type_dashu">Middle-aged man</string>
    <string name="trtckaraoke_audio_change_type_kongling">Ethereal voice</string>
    <string name="trtckaraoke_audio_reverb_type_ktv">Karaoke room</string>
    <string name="trtckaraoke_audio_reverb_type_lowdeep">Deep</string>
    <string name="trtckaraoke_audio_reverb_type_heavymetal">Metallic</string>
    <string name="trtckaraoke_audio_reverb_type_hongliang">Resonant</string>
    <string name="trtckaraoke_gift_charge">charge</string>
    <string name="trtckaraoke_gift_send">send%s</string>
    <string name="trtckaraoke_gift_game_currency">Game currency %d</string>
    <string name="trtckaraoke_gift_give_gift">Give gift</string>

    <string name="trtckaraoke_search_music_hint">search</string>
    <string name="trtckaraoke_loading_no_data">No data</string>
    <string name="trtckaraoke_loading_more_music">Loading</string>
    <string name="trtckaraoke_loading_no_more_data">No more Data</string>
    <string name="trtckaraoke_loading_error">Loading failed</string>
    <string name="trtckaraoke_input_keywords">Please enter your search terms</string>
    <string name="trtckaraoke_tips_start_audio">Please turn on the microphone permission first</string>
    <string name="trtckaraoke_permission_mic_reason_title">%s applies for access to the microphone</string>
    <string name="trtckaraoke_permission_mic_reason">Needs access to your microphone, and it can be used for functions such as Interactive Video Streaming, Show Live, Video Call, Group Video Call, Multi-person audio and video room, etc.</string>
    <string name="trtckaraoke_btn_start_chorus">Start Duet</string>
    <string name="trtckaraoke_toast_room_owner_can_operate_it">Room owner can operate it</string>
    <string name="trtckaraoke_dashboard">Dashboard</string>
    <string name="trtckaraoke_network_info">Network Info</string>
    <string name="trtckaraoke_local_audio_info">Local Audio Info</string>
    <string name="trtckaraoke_remote_audio_info">Remote Audio Info</string>
    <string name="trtckaraoke_toast_supported_chorus_with_poor_network">The current network is poor, and the chorus effect cannot be guaranteed</string>
    <string name="trtckaraoke_toast_not_supported_chorus">The current network is poor, and the chorus function is temporarily not supported</string>
    <string name="trtckaraoke_toast_network_not_available">The current network is not available</string>
    <string name="trtckaraoke_toast_muisc_no_accompaniment">Current song has no accompaniment</string>
    <string name="trtckaraoke_say_something">Say something</string>
    <string name="trtckaraoke_upate_network_time_fail_tips">The current network is bad, the Karaoke experience cannot
        be guaranteed，so not support take seat now.</string>
    <string name="trtckaraoke_retry">Retry</string>
    <string name="trtckaraoke_confirm_to_delete_music">Do you want to delete %s</string>
    <string name="trtckaraoke_audio_headset_check_tip">In order to ensure the singing effect, it is recommended to wear headphones to sing. It is recommended to use the accompaniment mode in the external playback scene, and do not adjust the system volume at will</string>
    <string name="trtckaraoke_toast_music_download_failed">%s failed to download, please try ordering the song again</string>
    <string name="trtckaraoke_lyric_empty_hint">lyric is empty</string>
    <string name="trtckaraoke_single_score"> %d points</string>
    <string name="trtckaraoke_close">Close</string>
    <string name="trtckaraoke_score">points</string>
    <string name="trtckaraoke_your_final_score">Your final score</string>
</resources>


