<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/trtckaraoke_bg_bottom_dialog"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <View
        android:id="@+id/line_top_separator"
        android:layout_width="32dp"
        android:layout_height="4dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/trtckaraoke_bg_separate_line"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/music_effect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trtckaraoke_sound_effects"
        android:textColor="@color/trtckaraoke_white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_top_separator" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_listen_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        app:layout_constraintTop_toBottomOf="@+id/music_effect">

        <TextView
            android:id="@+id/text_ear_monitor_title"
            style="@style/TRTCKtvAudioEffetcTextStyle"
            android:text="@string/trtckaraoke_sound_audition"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <TextView
            android:id="@+id/text_ear_monitor_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trtckaraoke_put_on_your_headphones"
            android:textColor="@color/trtckaraoke_white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/text_ear_monitor_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_ear_monitor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="Off"
            android:textOn="On"
            android:thumb="@drawable/trtckaraoke_ic_switch"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:track="@drawable/trtckaraoke_ic_switch_track" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_music_volume_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        app:layout_constraintTop_toBottomOf="@+id/cl_listen_test">

        <TextView
            android:id="@+id/tv_bgm_title"
            style="@style/TRTCKtvAudioEffetcTextStyle"
            android:text="@string/trtckaraoke_music_volume"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <SeekBar
            android:id="@+id/sb_bgm_volume"
            style="@style/TRTCKtvAudioEffectSeekBarStyle"
            android:progress="60"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/tv_bgm_title"
            app:layout_constraintRight_toLeftOf="@+id/tv_bgm_volume"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_bgm_volume"
            style="@style/TRTCKtvAudioEffectNumStyle"
            android:text="60"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/sb_bgm_volume"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_music_voice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        app:layout_constraintTop_toBottomOf="@+id/cl_music_volume_change">

        <TextView
            android:id="@+id/tv_mic_title"
            style="@style/TRTCKtvAudioEffetcTextStyle"
            android:text="@string/trtckaraoke_mic_volume"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <SeekBar
            android:id="@+id/sb_mic_volume"
            style="@style/TRTCKtvAudioEffectSeekBarStyle"
            android:progress="80"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/tv_mic_title"
            app:layout_constraintRight_toLeftOf="@+id/tv_mic_volume"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_mic_volume"
            style="@style/TRTCKtvAudioEffectNumStyle"
            android:text="80"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/sb_mic_volume"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_music_tone_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        app:layout_constraintTop_toBottomOf="@+id/cl_music_voice">

        <TextView
            android:id="@+id/sb_pitch_title"
            style="@style/TRTCKtvAudioEffetcTextStyle"
            android:text="@string/trtckaraoke_sounds_adjustment"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <SeekBar
            android:id="@+id/sb_pitch_level"
            style="@style/TRTCKtvAudioEffectSeekBarStyle"
            android:progress="50"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/sb_pitch_title"
            app:layout_constraintRight_toLeftOf="@+id/tv_pitch_level"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_pitch_level"
            style="@style/TRTCKtvAudioEffectNumStyle"
            android:text="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/sb_pitch_level"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_reverb"
        style="@style/TRTCKtvAudioEffetcTextStyle"
        android:text="@string/trtckaraoke_reverb"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_music_tone_change" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_audio_reverb_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_reverb" />

    <View
        android:id="@+id/line_changer_reverb"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/trtckaraoke_transparent"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_audio_reverb_type" />

    <TextView
        android:id="@+id/text_voice_changer_title"
        style="@style/TRTCKtvAudioEffetcTextStyle"
        android:text="@string/trtckaraoke_changer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_changer_reverb" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle_voice_changer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_voice_changer_title" />

    <View
        android:id="@+id/bottom_line"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/trtckaraoke_transparent"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycle_voice_changer" />

</androidx.constraintlayout.widget.ConstraintLayout>